--- a/_config.yml
+++ b/_config.yml
@@ -8,22 +8,22 @@ plugins:
 
 #-------------------------------
 # General Site Settings
-title: Johnny Hopkins
-description: "Hi I'm Johnny, and I'm a Data Scientist.  My portfolio focuses on interesting projects I've recently undertaken, with a strong emphasis on business impact. Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
+title: Greg Nemetz
+description: "Hi I'm Greg, and I'm a Data Analyst.  My portfolio focuses on interesting projects I've recently undertaken.Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 #-------------------------------
 # About Section
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
-location: "London, UK"
-resume_url: /docs/resume.docx
-avatar_image: /img/profile_picture.JPG
+location: "Dublin, OH"
+resume_url: /docs/Greg Nemetz Resume.pdf
+avatar_image: /img/Profile Pic v1.JPG
 
 #-------------------------------
 # Contact links
-linkedln: "https://linkedln.com/#" # Add your linkedln handle
-github: "https://github.com/#"  # Add your github handle
+linkedln: "www.linkedin.com/in/greg-nemetz" # Add your linkedln handle
+github: "https://github.com/gnemetz"  # Add your github handle
 
 paginate: 6
 paginate_path: "/page/:num"
