--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
 #-------------------------------
 # General Site Settings
 title: Greg Nemetz
-description: "Hi I'm Greg, and I'm a Data Analyst.  My portfolio focuses on interesting projects I've recently undertaken.Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
+description: "Hi I'm Greg, and I'm a Data Analyst. My portfolio focuses on interesting projects I've recently undertaken. Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -17,8 +17,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # About Section
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "Dublin, OH"
-resume_url: /docs/Greg Nemetz Resume.pdf
-avatar_image: /img/Profile Pic v1.JPG
+resume_url: /img/Greg Nemetz Resume.pdf
+avatar_image: /img/Profile Pic v1.jpg
 
 #-------------------------------
 # Contact links
